# data_io

./: .gitignore  README.md  prefix_config.yaml  requirements.txt  sample_tokenized.py
pipe/: clean_amps_khan.py  clean_gsm8k_train.py  clean_math_train.py  clean_natural_reasoning.py  clean_no_robots.py  clean_numinamath.py  clean_omnimath.py  clean_principia_collection.py  clean_webinstruct_verified.py
pipe/clean_platypus/: clean_arb.py  clean_openbookqa.py  clean_reclor.py  clean_scibench.py  clean_scienceqa.py  clean_theoremqa.py
pipe_clustered/: clean_SYNTH.py  clean_acereason.py  clean_ampsmathematica.py  clean_dmmath.py  clean_flan.py  clean_openmathinstruct2.py  clean_openthoughts2.py  clean_sudoku.py  clean_tasksource.py  clean_textbookreasoning.py
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  main.rs
trained_tokenizers/bpe/: config.json
utils/: __init__.py
