[package]
name = "tokenizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
parquet = "57.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.14"
tokenizers = { version = "0.22", features = ["http"] }
core_affinity = "0.8"
indicatif = { version = "0.18", features = ["rayon"] }
arrow = "57.2"
crossbeam-queue = "0.3"
walkdir = "2.5"
mimalloc = "0.1"
ndarray = "0.17"
ndarray-npy = "0.10"
rand = "0.10.0-rc.6"
rand_pcg = "0.10.0-rc.6"
rayon = "1.11"
